--- a/app/src/main/res/layout/activity_queens.xml
+++ b/app/src/main/res/layout/activity_queens.xml
@@ -3,14 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="solutionsFound"
+            type="int" />
+    </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".sudoku.SudokuActivity"
-        tools:ignore="HardcodedText">
+        tools:context=".queens.QueensActivity"
+        tools:ignore="HardcodedText,RelativeOverlap">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/sudokuToolbar"
+            android:id="@+id/queensToolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:layout_alignParentTop="true"
@@ -25,7 +32,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/sudokuBackImgView"
+                    android:id="@+id/queensBackImgView"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentStart="true"
@@ -43,7 +50,7 @@
                     android:layout_centerInParent="true"
                     android:background="@android:color/transparent"
                     android:fontFamily="cursive"
-                    android:text="Sudoku"
+                    android:text="@string/_8_queens"
                     android:textColor="@color/darkerRose"
                     android:textSize="26sp"
                     android:textStyle="bold"
@@ -52,14 +59,92 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-        <com.example.android.aigames.sudoku.SudokuBoardView
-            android:id="@+id/sudokuBoardView"
+        <com.example.android.aigames.queens.QueensBoardView
+            android:id="@+id/queensBoardView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/sudokuToolbar"
-            android:layout_margin="5dp"
-            android:padding="3dp" />
+            android:layout_below="@id/queensToolbar"
+            android:layout_margin="5dp" />
 
+        <RelativeLayout
+            android:id="@+id/buttonsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/queensBoardView"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/checkQueensBtn"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:text="Check" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/solveQueensBtn"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/checkQueensBtn"
+                android:layout_alignParentEnd="true"
+                android:text="Solve" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/deleteBtn"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                app:icon="@drawable/ic_eraser"
+                app:iconGravity="textStart"
+                app:iconPadding="0dp"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Circle" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/placeQueenBtn"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_below="@id/deleteBtn"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:padding="0dp"
+                app:icon="@drawable/ic_queen_small"
+                app:iconGravity="textStart"
+                app:iconPadding="0dp"
+                app:iconSize="28dp"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Circle" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/solutionsTxtView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/buttonsLayout"
+            android:layout_centerHorizontal="true"
+            android:paddingTop="50dp"
+            android:text="@{@string/solutions_count(solutionsFound)}"
+            android:textAllCaps="true"
+            android:textColor="@{solutionsFound == 0 ? @color/holoRed : @color/darkerRose}"
+            android:textSize="18sp"
+            android:visibility="visible"
+            tools:text="4 solutions found" />
 
         <RelativeLayout
             android:id="@+id/successLayout"
@@ -113,73 +198,7 @@
                     app:cornerRadius="5dp" />
             </RelativeLayout>
         </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/buttonsLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/sudokuBoardView"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp">
-
-            <com.google.android.material.button.MaterialButtonToggleGroup
-                android:id="@+id/noteBtnToggleGroup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                app:singleSelection="true"
-                tools:ignore="RelativeOverlap">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/noteToggleBtn"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:layout_width="55dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    app:icon="@drawable/ic_notes"
-                    app:iconGravity="textStart"
-                    app:iconPadding="0dp" />
-
-            </com.google.android.material.button.MaterialButtonToggleGroup>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/hintBtn"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="10dp"
-                android:layout_toStartOf="@id/noteBtnToggleGroup"
-                android:gravity="center"
-                app:icon="@drawable/ic_hint"
-                app:iconGravity="textStart"
-                app:iconPadding="0dp"
-                app:strokeColor="@color/darkerRose" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/deleteBtn"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:insetLeft="0dp"
-                android:insetTop="0dp"
-                android:insetRight="0dp"
-                android:insetBottom="0dp"
-                android:padding="0dp"
-                app:icon="@drawable/ic_eraser"
-                app:iconGravity="textStart"
-                app:iconPadding="0dp"
-                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Circle" />
-
-        </RelativeLayout>
-
-        <com.example.android.aigames.sudoku.tagSphere.TagSphereView
-            android:id="@+id/numSphereView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/buttonsLayout" />
     </RelativeLayout>
+
+
 </layout>
